# ubdlintegration

./: .gitignore  CMakeLists.txt  CosmicMRCNN.cxx  CosmicMRCNN.h  DLInterface_module.cc  Infill.cxx  Infill.h  LArFlow.cxx  LArFlow.h  PyNet_CosmicMRCNN.cxx  PyNet_CosmicMRCNN.h  PyNet_SparseInfill.cxx  PyNet_SparseInfill.h  PyNet_SparseSSNet.cxx  PyNet_SparseSSNet.h  README.md  SSNet.cxx  SSNet.h  SSNetInterface_module.cc  ServerInterface.cxx  ServerInterface.h  dl_driver.fcl  dl_driver_cpu.fcl  dl_driver_server.fcl  dlinterface.fcl  ssnet_driver.fcl  supera_ssnetinterface.fcl  ubcrop.fcl  ubcroptrueflow.cfg
pynet_deploy/: Infill_ForwardPass.py  clean_mrcnn_weights.py  inference_mrcnn.py  inference_sparse_ssnet.py  infill_split.cfg
test_grid/: cleanup.sh  dl_driver_server.fcl  init.sh  project_test_ssnet_cpumode.xml  project_test_ssnet_server.xml  rundlreco.sh
testserver/: .gitignore  GNUmakefile  run_testclient.cxx  start_testserver.cxx
